...
        android:id="@+id/map_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:id="@+id/map"
            map:mapId="@string/map_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/select_location_button"/>

        <ImageButton
            android:id="@+id/location_settings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:tint="@color/white"
...
